--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,38 +5,38 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
-
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
-
+	<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+	<script src="js/skel.min.js"></script>
+	<script src="js/init.js"></script>
+	<noscript>
+		<link rel="stylesheet" href="css/skel.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style-wide.css" />
+		<link rel="stylesheet" href="css/style-noscript.css" />
+	</noscript>
+	<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
     </head>
-    <body>
+    <body class="loading">
 
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
+        <div class="wrapper">
+          <div id="bg"></div>
+          <div id="overlay"></div>
+          <div id="main">
+            <header id="header">
+              <h1>{{ site.name }}</h1>
+		<p>Software Engineer at Adobe &nbsp;&bull;&nbsp; Snowboarder, Sailer and Springboard Diver</p>
+		<nav>
+			<ul>
+				<li><a href="https://twitter.com/robert_mccubbin" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://www.facebook.com/rmccubbin" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+				<li><a href="https://github.com/rmccubbin" class="icon fa-github"><span class="label">Github</span></a></li>
+			</ul>
+		</nav>
+            </header>
 
-          {{ content }}
+            {{ content }}
 
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Robert McCubbin<br />
-                Developer Technologies Engineer at Adobe<br />
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/rmccubbin">github.com/rmccubbin</a><br />
-                <a href="https://twitter.com/robert_mccubbin">twitter.com/robert_mccubbin</a><br />
-              </p>
-            </div>
-          </div>
         </div>
 
     </body>
