add http prefix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 				<li><a href="https://twitter.com/robert_mccubbin" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="https://www.facebook.com/rmccubbin" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 				<li><a href="https://github.com/rmccubbin" class="icon fa-github"><span class="label">Github</span></a></li>
-				<li><a href="uk.linkedin.com/in/rmccubbin" class="icon fa-linkedin"><span class="label">Linked In</span></a></li>
+				<li><a href="https://uk.linkedin.com/in/rmccubbin" class="icon fa-linkedin"><span class="label">Linked In</span></a></li>
 			</ul>
 		</nav>
             </header>
